Version4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID VARIABLE SP X END SEMMICOLON
Rule 2     VARIABLE -> DIM IDLIST AS TIPO SEMMICOLON VARIABLE
Rule 3     VARIABLE -> <empty>
Rule 4     IDLIST -> ID
Rule 5     IDLIST -> IDLIST COMMA ID
Rule 6     TIPO -> WORD
Rule 7     TIPO -> FLOAT
Rule 8     TIPO -> ARRAY DCLARRAY
Rule 9     TIPO -> MATRIX DCLMATRIX
Rule 10    TIPO -> CUBE DCLCUBE
Rule 11    DCLARRAY -> LBRACKET Z RBRACKET
Rule 12    DCLMATRIX -> LBRACKET Z RBRACKET LBRACKET Z RBRACKET
Rule 13    DCLCUBE -> LBRACKET Z RBRACKET LBRACKET Z RBRACKET LBRACKET Z RBRACKET
Rule 14    Z -> NUMBER
Rule 15    Z -> ID
Rule 16    SP -> SUBPROCEDURE ID X ENDSUB SEMMICOLON SP
Rule 17    SP -> <empty>
Rule 18    X -> STATEMENTS SEMMICOLON X
Rule 19    X -> <empty>
Rule 20    STATEMENTS -> LET U ASSIGN E
Rule 21    STATEMENTS -> PRINT Q
Rule 22    STATEMENTS -> INPUT TEXT GTGT VAR
Rule 23    VAR -> ID
Rule 24    VAR -> ID DCLARRAY
Rule 25    VAR -> ID DCLMATRIX
Rule 26    VAR -> ID DCLCUBE
Rule 27    STATEMENTS -> CLS
Rule 28    STATEMENTS -> IF EL THEN1 X ELSE1 X ENDIF
Rule 29    ELSE1 -> ELSE
Rule 30    ELSE1 -> <empty>
Rule 31    THEN1 -> THEN
Rule 32    STATEMENTS -> WHILE1 EL DO1 X WHEND
Rule 33    WHILE1 -> WHILE
Rule 34    DO1 -> DO
Rule 35    STATEMENTS -> DO2 X LOOPUNTIL EL ENDO
Rule 36    DO2 -> DO
Rule 37    STATEMENTS -> FOR ID1 ASSIGN E TO1 E DO3 X NEXT
Rule 38    ID1 -> ID
Rule 39    TO1 -> TO
Rule 40    DO3 -> DO
Rule 41    STATEMENTS -> GOSUB ID
Rule 42    U -> ID
Rule 43    U -> ID DCLARRAY
Rule 44    U -> ID DCLMATRIX
Rule 45    U -> ID DCLCUBE
Rule 46    Q -> LPARENT VAR RPARENT
Rule 47    Q -> TEXT
Rule 48    TEXT -> LPARENT STRING H RPARENT
Rule 49    TEXT -> <empty>
Rule 50    H -> PLUS STRING H
Rule 51    H -> PLUS U H
Rule 52    H -> <empty>
Rule 53    E -> E PLUS T
Rule 54    E -> E MINUS T
Rule 55    E -> T
Rule 56    T -> T TIMES F
Rule 57    T -> T DIVIDE F
Rule 58    T -> F
Rule 59    F -> NUMBER
Rule 60    F -> U
Rule 61    F -> LPARENT E RPARENT
Rule 62    EL -> EL OR TL
Rule 63    EL -> TL NOT
Rule 64    EL -> TL
Rule 65    TL -> TL AND FL
Rule 66    TL -> FL
Rule 67    FL -> K OPREL K
Rule 68    FL -> LPARENT EL RPARENT
Rule 69    OPREL -> LT
Rule 70    OPREL -> LTE
Rule 71    OPREL -> GT
Rule 72    OPREL -> GTE
Rule 73    OPREL -> NE
Rule 74    OPREL -> EQUAL
Rule 75    K -> ID
Rule 76    K -> NUMBER

Terminals, with rules where they appear

AND                  : 65
ARRAY                : 8
AS                   : 2
ASSIGN               : 20 37
CLS                  : 27
COMMA                : 5
CUBE                 : 10
DIM                  : 2
DIVIDE               : 57
DO                   : 34 36 40
ELSE                 : 29
END                  : 1
ENDIF                : 28
ENDO                 : 35
ENDSUB               : 16
EQUAL                : 74
FLOAT                : 7
FOR                  : 37
GOSUB                : 41
GT                   : 71
GTE                  : 72
GTGT                 : 22
ID                   : 1 4 5 15 16 23 24 25 26 38 41 42 43 44 45 75
IF                   : 28
INPUT                : 22
LBRACKET             : 11 12 12 13 13 13
LET                  : 20
LOOPUNTIL            : 35
LPARENT              : 46 48 61 68
LT                   : 69
LTE                  : 70
MATRIX               : 9
MINUS                : 54
NE                   : 73
NEXT                 : 37
NOT                  : 63
NUMBER               : 14 59 76
OR                   : 62
PLUS                 : 50 51 53
PRINT                : 21
PROGRAM              : 1
RBRACKET             : 11 12 12 13 13 13
RPARENT              : 46 48 61 68
SEMMICOLON           : 1 2 16 18
STRING               : 48 50
SUBPROCEDURE         : 16
THEN                 : 31
TIMES                : 56
TO                   : 39
WHEND                : 32
WHILE                : 33
WORD                 : 6
error                : 

Nonterminals, with rules where they appear

DCLARRAY             : 8 24 43
DCLCUBE              : 10 26 45
DCLMATRIX            : 9 25 44
DO1                  : 32
DO2                  : 35
DO3                  : 37
E                    : 20 37 37 53 54 61
EL                   : 28 32 35 62 68
ELSE1                : 28
F                    : 56 57 58
FL                   : 65 66
H                    : 48 50 51
ID1                  : 37
IDLIST               : 2 5
K                    : 67 67
OPREL                : 67
Q                    : 21
SP                   : 1 16
STATEMENTS           : 18
T                    : 53 54 55 56 57
TEXT                 : 22 47
THEN1                : 28
TIPO                 : 2
TL                   : 62 63 64 65
TO1                  : 37
U                    : 20 51 60
VAR                  : 22 46
VARIABLE             : 1 2
WHILE1               : 32
X                    : 1 16 18 28 28 32 35 37
Z                    : 11 12 12 13 13 13
program              : 0

Parsing method: SLR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID VARIABLE SP X END SEMMICOLON

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID VARIABLE SP X END SEMMICOLON

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . VARIABLE SP X END SEMMICOLON
    (2) VARIABLE -> . DIM IDLIST AS TIPO SEMMICOLON VARIABLE
    (3) VARIABLE -> .

    DIM             shift and go to state 5
    SUBPROCEDURE    reduce using rule 3 (VARIABLE -> .)
    LET             reduce using rule 3 (VARIABLE -> .)
    PRINT           reduce using rule 3 (VARIABLE -> .)
    INPUT           reduce using rule 3 (VARIABLE -> .)
    CLS             reduce using rule 3 (VARIABLE -> .)
    IF              reduce using rule 3 (VARIABLE -> .)
    FOR             reduce using rule 3 (VARIABLE -> .)
    GOSUB           reduce using rule 3 (VARIABLE -> .)
    WHILE           reduce using rule 3 (VARIABLE -> .)
    DO              reduce using rule 3 (VARIABLE -> .)
    END             reduce using rule 3 (VARIABLE -> .)

    VARIABLE                       shift and go to state 4

state 4

    (1) program -> PROGRAM ID VARIABLE . SP X END SEMMICOLON
    (16) SP -> . SUBPROCEDURE ID X ENDSUB SEMMICOLON SP
    (17) SP -> .

    SUBPROCEDURE    shift and go to state 7
    LET             reduce using rule 17 (SP -> .)
    PRINT           reduce using rule 17 (SP -> .)
    INPUT           reduce using rule 17 (SP -> .)
    CLS             reduce using rule 17 (SP -> .)
    IF              reduce using rule 17 (SP -> .)
    FOR             reduce using rule 17 (SP -> .)
    GOSUB           reduce using rule 17 (SP -> .)
    WHILE           reduce using rule 17 (SP -> .)
    DO              reduce using rule 17 (SP -> .)
    END             reduce using rule 17 (SP -> .)

    SP                             shift and go to state 6

state 5

    (2) VARIABLE -> DIM . IDLIST AS TIPO SEMMICOLON VARIABLE
    (4) IDLIST -> . ID
    (5) IDLIST -> . IDLIST COMMA ID

    ID              shift and go to state 9

    IDLIST                         shift and go to state 8

state 6

    (1) program -> PROGRAM ID VARIABLE SP . X END SEMMICOLON
    (18) X -> . STATEMENTS SEMMICOLON X
    (19) X -> .
    (20) STATEMENTS -> . LET U ASSIGN E
    (21) STATEMENTS -> . PRINT Q
    (22) STATEMENTS -> . INPUT TEXT GTGT VAR
    (27) STATEMENTS -> . CLS
    (28) STATEMENTS -> . IF EL THEN1 X ELSE1 X ENDIF
    (32) STATEMENTS -> . WHILE1 EL DO1 X WHEND
    (35) STATEMENTS -> . DO2 X LOOPUNTIL EL ENDO
    (37) STATEMENTS -> . FOR ID1 ASSIGN E TO1 E DO3 X NEXT
    (41) STATEMENTS -> . GOSUB ID
    (33) WHILE1 -> . WHILE
    (36) DO2 -> . DO

  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for CLS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for GOSUB resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
    END             reduce using rule 19 (X -> .)
    ENDSUB          reduce using rule 19 (X -> .)
    ELSE            reduce using rule 19 (X -> .)
    ENDIF           reduce using rule 19 (X -> .)
    WHEND           reduce using rule 19 (X -> .)
    LOOPUNTIL       reduce using rule 19 (X -> .)
    NEXT            reduce using rule 19 (X -> .)
    LET             shift and go to state 12
    PRINT           shift and go to state 13
    INPUT           shift and go to state 14
    CLS             shift and go to state 15
    IF              shift and go to state 16
    FOR             shift and go to state 19
    GOSUB           shift and go to state 20
    WHILE           shift and go to state 21
    DO              shift and go to state 22

  ! LET             [ reduce using rule 19 (X -> .) ]
  ! PRINT           [ reduce using rule 19 (X -> .) ]
  ! INPUT           [ reduce using rule 19 (X -> .) ]
  ! CLS             [ reduce using rule 19 (X -> .) ]
  ! IF              [ reduce using rule 19 (X -> .) ]
  ! FOR             [ reduce using rule 19 (X -> .) ]
  ! GOSUB           [ reduce using rule 19 (X -> .) ]
  ! WHILE           [ reduce using rule 19 (X -> .) ]
  ! DO              [ reduce using rule 19 (X -> .) ]

    X                              shift and go to state 10
    STATEMENTS                     shift and go to state 11
    WHILE1                         shift and go to state 17
    DO2                            shift and go to state 18

state 7

    (16) SP -> SUBPROCEDURE . ID X ENDSUB SEMMICOLON SP

    ID              shift and go to state 23


state 8

    (2) VARIABLE -> DIM IDLIST . AS TIPO SEMMICOLON VARIABLE
    (5) IDLIST -> IDLIST . COMMA ID

    AS              shift and go to state 24
    COMMA           shift and go to state 25


state 9

    (4) IDLIST -> ID .

    AS              reduce using rule 4 (IDLIST -> ID .)
    COMMA           reduce using rule 4 (IDLIST -> ID .)


state 10

    (1) program -> PROGRAM ID VARIABLE SP X . END SEMMICOLON

    END             shift and go to state 26


state 11

    (18) X -> STATEMENTS . SEMMICOLON X

    SEMMICOLON      shift and go to state 27


state 12

    (20) STATEMENTS -> LET . U ASSIGN E
    (42) U -> . ID
    (43) U -> . ID DCLARRAY
    (44) U -> . ID DCLMATRIX
    (45) U -> . ID DCLCUBE

    ID              shift and go to state 29

    U                              shift and go to state 28

state 13

    (21) STATEMENTS -> PRINT . Q
    (46) Q -> . LPARENT VAR RPARENT
    (47) Q -> . TEXT
    (48) TEXT -> . LPARENT STRING H RPARENT
    (49) TEXT -> .

    LPARENT         shift and go to state 31
    GTGT            reduce using rule 49 (TEXT -> .)
    SEMMICOLON      reduce using rule 49 (TEXT -> .)

    Q                              shift and go to state 30
    TEXT                           shift and go to state 32

state 14

    (22) STATEMENTS -> INPUT . TEXT GTGT VAR
    (48) TEXT -> . LPARENT STRING H RPARENT
    (49) TEXT -> .

    LPARENT         shift and go to state 34
    GTGT            reduce using rule 49 (TEXT -> .)
    SEMMICOLON      reduce using rule 49 (TEXT -> .)

    TEXT                           shift and go to state 33

state 15

    (27) STATEMENTS -> CLS .

    SEMMICOLON      reduce using rule 27 (STATEMENTS -> CLS .)


state 16

    (28) STATEMENTS -> IF . EL THEN1 X ELSE1 X ENDIF
    (62) EL -> . EL OR TL
    (63) EL -> . TL NOT
    (64) EL -> . TL
    (65) TL -> . TL AND FL
    (66) TL -> . FL
    (67) FL -> . K OPREL K
    (68) FL -> . LPARENT EL RPARENT
    (75) K -> . ID
    (76) K -> . NUMBER

    LPARENT         shift and go to state 39
    ID              shift and go to state 40
    NUMBER          shift and go to state 41

    EL                             shift and go to state 35
    TL                             shift and go to state 36
    FL                             shift and go to state 37
    K                              shift and go to state 38

state 17

    (32) STATEMENTS -> WHILE1 . EL DO1 X WHEND
    (62) EL -> . EL OR TL
    (63) EL -> . TL NOT
    (64) EL -> . TL
    (65) TL -> . TL AND FL
    (66) TL -> . FL
    (67) FL -> . K OPREL K
    (68) FL -> . LPARENT EL RPARENT
    (75) K -> . ID
    (76) K -> . NUMBER

    LPARENT         shift and go to state 39
    ID              shift and go to state 40
    NUMBER          shift and go to state 41

    EL                             shift and go to state 42
    TL                             shift and go to state 36
    FL                             shift and go to state 37
    K                              shift and go to state 38

state 18

    (35) STATEMENTS -> DO2 . X LOOPUNTIL EL ENDO
    (18) X -> . STATEMENTS SEMMICOLON X
    (19) X -> .
    (20) STATEMENTS -> . LET U ASSIGN E
    (21) STATEMENTS -> . PRINT Q
    (22) STATEMENTS -> . INPUT TEXT GTGT VAR
    (27) STATEMENTS -> . CLS
    (28) STATEMENTS -> . IF EL THEN1 X ELSE1 X ENDIF
    (32) STATEMENTS -> . WHILE1 EL DO1 X WHEND
    (35) STATEMENTS -> . DO2 X LOOPUNTIL EL ENDO
    (37) STATEMENTS -> . FOR ID1 ASSIGN E TO1 E DO3 X NEXT
    (41) STATEMENTS -> . GOSUB ID
    (33) WHILE1 -> . WHILE
    (36) DO2 -> . DO

  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for CLS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for GOSUB resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
    END             reduce using rule 19 (X -> .)
    ENDSUB          reduce using rule 19 (X -> .)
    ELSE            reduce using rule 19 (X -> .)
    ENDIF           reduce using rule 19 (X -> .)
    WHEND           reduce using rule 19 (X -> .)
    LOOPUNTIL       reduce using rule 19 (X -> .)
    NEXT            reduce using rule 19 (X -> .)
    LET             shift and go to state 12
    PRINT           shift and go to state 13
    INPUT           shift and go to state 14
    CLS             shift and go to state 15
    IF              shift and go to state 16
    FOR             shift and go to state 19
    GOSUB           shift and go to state 20
    WHILE           shift and go to state 21
    DO              shift and go to state 22

  ! LET             [ reduce using rule 19 (X -> .) ]
  ! PRINT           [ reduce using rule 19 (X -> .) ]
  ! INPUT           [ reduce using rule 19 (X -> .) ]
  ! CLS             [ reduce using rule 19 (X -> .) ]
  ! IF              [ reduce using rule 19 (X -> .) ]
  ! FOR             [ reduce using rule 19 (X -> .) ]
  ! GOSUB           [ reduce using rule 19 (X -> .) ]
  ! WHILE           [ reduce using rule 19 (X -> .) ]
  ! DO              [ reduce using rule 19 (X -> .) ]

    DO2                            shift and go to state 18
    X                              shift and go to state 43
    STATEMENTS                     shift and go to state 11
    WHILE1                         shift and go to state 17

state 19

    (37) STATEMENTS -> FOR . ID1 ASSIGN E TO1 E DO3 X NEXT
    (38) ID1 -> . ID

    ID              shift and go to state 45

    ID1                            shift and go to state 44

state 20

    (41) STATEMENTS -> GOSUB . ID

    ID              shift and go to state 46


state 21

    (33) WHILE1 -> WHILE .

    LPARENT         reduce using rule 33 (WHILE1 -> WHILE .)
    ID              reduce using rule 33 (WHILE1 -> WHILE .)
    NUMBER          reduce using rule 33 (WHILE1 -> WHILE .)


state 22

    (36) DO2 -> DO .

    LET             reduce using rule 36 (DO2 -> DO .)
    PRINT           reduce using rule 36 (DO2 -> DO .)
    INPUT           reduce using rule 36 (DO2 -> DO .)
    CLS             reduce using rule 36 (DO2 -> DO .)
    IF              reduce using rule 36 (DO2 -> DO .)
    FOR             reduce using rule 36 (DO2 -> DO .)
    GOSUB           reduce using rule 36 (DO2 -> DO .)
    WHILE           reduce using rule 36 (DO2 -> DO .)
    DO              reduce using rule 36 (DO2 -> DO .)
    LOOPUNTIL       reduce using rule 36 (DO2 -> DO .)


state 23

    (16) SP -> SUBPROCEDURE ID . X ENDSUB SEMMICOLON SP
    (18) X -> . STATEMENTS SEMMICOLON X
    (19) X -> .
    (20) STATEMENTS -> . LET U ASSIGN E
    (21) STATEMENTS -> . PRINT Q
    (22) STATEMENTS -> . INPUT TEXT GTGT VAR
    (27) STATEMENTS -> . CLS
    (28) STATEMENTS -> . IF EL THEN1 X ELSE1 X ENDIF
    (32) STATEMENTS -> . WHILE1 EL DO1 X WHEND
    (35) STATEMENTS -> . DO2 X LOOPUNTIL EL ENDO
    (37) STATEMENTS -> . FOR ID1 ASSIGN E TO1 E DO3 X NEXT
    (41) STATEMENTS -> . GOSUB ID
    (33) WHILE1 -> . WHILE
    (36) DO2 -> . DO

  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for CLS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for GOSUB resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
    END             reduce using rule 19 (X -> .)
    ENDSUB          reduce using rule 19 (X -> .)
    ELSE            reduce using rule 19 (X -> .)
    ENDIF           reduce using rule 19 (X -> .)
    WHEND           reduce using rule 19 (X -> .)
    LOOPUNTIL       reduce using rule 19 (X -> .)
    NEXT            reduce using rule 19 (X -> .)
    LET             shift and go to state 12
    PRINT           shift and go to state 13
    INPUT           shift and go to state 14
    CLS             shift and go to state 15
    IF              shift and go to state 16
    FOR             shift and go to state 19
    GOSUB           shift and go to state 20
    WHILE           shift and go to state 21
    DO              shift and go to state 22

  ! LET             [ reduce using rule 19 (X -> .) ]
  ! PRINT           [ reduce using rule 19 (X -> .) ]
  ! INPUT           [ reduce using rule 19 (X -> .) ]
  ! CLS             [ reduce using rule 19 (X -> .) ]
  ! IF              [ reduce using rule 19 (X -> .) ]
  ! FOR             [ reduce using rule 19 (X -> .) ]
  ! GOSUB           [ reduce using rule 19 (X -> .) ]
  ! WHILE           [ reduce using rule 19 (X -> .) ]
  ! DO              [ reduce using rule 19 (X -> .) ]

    X                              shift and go to state 47
    STATEMENTS                     shift and go to state 11
    WHILE1                         shift and go to state 17
    DO2                            shift and go to state 18

state 24

    (2) VARIABLE -> DIM IDLIST AS . TIPO SEMMICOLON VARIABLE
    (6) TIPO -> . WORD
    (7) TIPO -> . FLOAT
    (8) TIPO -> . ARRAY DCLARRAY
    (9) TIPO -> . MATRIX DCLMATRIX
    (10) TIPO -> . CUBE DCLCUBE

    WORD            shift and go to state 49
    FLOAT           shift and go to state 50
    ARRAY           shift and go to state 51
    MATRIX          shift and go to state 52
    CUBE            shift and go to state 53

    TIPO                           shift and go to state 48

state 25

    (5) IDLIST -> IDLIST COMMA . ID

    ID              shift and go to state 54


state 26

    (1) program -> PROGRAM ID VARIABLE SP X END . SEMMICOLON

    SEMMICOLON      shift and go to state 55


state 27

    (18) X -> STATEMENTS SEMMICOLON . X
    (18) X -> . STATEMENTS SEMMICOLON X
    (19) X -> .
    (20) STATEMENTS -> . LET U ASSIGN E
    (21) STATEMENTS -> . PRINT Q
    (22) STATEMENTS -> . INPUT TEXT GTGT VAR
    (27) STATEMENTS -> . CLS
    (28) STATEMENTS -> . IF EL THEN1 X ELSE1 X ENDIF
    (32) STATEMENTS -> . WHILE1 EL DO1 X WHEND
    (35) STATEMENTS -> . DO2 X LOOPUNTIL EL ENDO
    (37) STATEMENTS -> . FOR ID1 ASSIGN E TO1 E DO3 X NEXT
    (41) STATEMENTS -> . GOSUB ID
    (33) WHILE1 -> . WHILE
    (36) DO2 -> . DO

  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for CLS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for GOSUB resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
    END             reduce using rule 19 (X -> .)
    ENDSUB          reduce using rule 19 (X -> .)
    ELSE            reduce using rule 19 (X -> .)
    ENDIF           reduce using rule 19 (X -> .)
    WHEND           reduce using rule 19 (X -> .)
    LOOPUNTIL       reduce using rule 19 (X -> .)
    NEXT            reduce using rule 19 (X -> .)
    LET             shift and go to state 12
    PRINT           shift and go to state 13
    INPUT           shift and go to state 14
    CLS             shift and go to state 15
    IF              shift and go to state 16
    FOR             shift and go to state 19
    GOSUB           shift and go to state 20
    WHILE           shift and go to state 21
    DO              shift and go to state 22

  ! LET             [ reduce using rule 19 (X -> .) ]
  ! PRINT           [ reduce using rule 19 (X -> .) ]
  ! INPUT           [ reduce using rule 19 (X -> .) ]
  ! CLS             [ reduce using rule 19 (X -> .) ]
  ! IF              [ reduce using rule 19 (X -> .) ]
  ! FOR             [ reduce using rule 19 (X -> .) ]
  ! GOSUB           [ reduce using rule 19 (X -> .) ]
  ! WHILE           [ reduce using rule 19 (X -> .) ]
  ! DO              [ reduce using rule 19 (X -> .) ]

    STATEMENTS                     shift and go to state 11
    X                              shift and go to state 56
    WHILE1                         shift and go to state 17
    DO2                            shift and go to state 18

state 28

    (20) STATEMENTS -> LET U . ASSIGN E

    ASSIGN          shift and go to state 57


state 29

    (42) U -> ID .
    (43) U -> ID . DCLARRAY
    (44) U -> ID . DCLMATRIX
    (45) U -> ID . DCLCUBE
    (11) DCLARRAY -> . LBRACKET Z RBRACKET
    (12) DCLMATRIX -> . LBRACKET Z RBRACKET LBRACKET Z RBRACKET
    (13) DCLCUBE -> . LBRACKET Z RBRACKET LBRACKET Z RBRACKET LBRACKET Z RBRACKET

    ASSIGN          reduce using rule 42 (U -> ID .)
    PLUS            reduce using rule 42 (U -> ID .)
    RPARENT         reduce using rule 42 (U -> ID .)
    SEMMICOLON      reduce using rule 42 (U -> ID .)
    TO              reduce using rule 42 (U -> ID .)
    DO              reduce using rule 42 (U -> ID .)
    MINUS           reduce using rule 42 (U -> ID .)
    TIMES           reduce using rule 42 (U -> ID .)
    DIVIDE          reduce using rule 42 (U -> ID .)
    LBRACKET        shift and go to state 61

    DCLARRAY                       shift and go to state 58
    DCLMATRIX                      shift and go to state 59
    DCLCUBE                        shift and go to state 60

state 30

    (21) STATEMENTS -> PRINT Q .

    SEMMICOLON      reduce using rule 21 (STATEMENTS -> PRINT Q .)


state 31

    (46) Q -> LPARENT . VAR RPARENT
    (48) TEXT -> LPARENT . STRING H RPARENT
    (23) VAR -> . ID
    (24) VAR -> . ID DCLARRAY
    (25) VAR -> . ID DCLMATRIX
    (26) VAR -> . ID DCLCUBE

    STRING          shift and go to state 63
    ID              shift and go to state 64

    VAR                            shift and go to state 62

state 32

    (47) Q -> TEXT .

    SEMMICOLON      reduce using rule 47 (Q -> TEXT .)


state 33

    (22) STATEMENTS -> INPUT TEXT . GTGT VAR

    GTGT            shift and go to state 65


state 34

    (48) TEXT -> LPARENT . STRING H RPARENT

    STRING          shift and go to state 63


state 35

    (28) STATEMENTS -> IF EL . THEN1 X ELSE1 X ENDIF
    (62) EL -> EL . OR TL
    (31) THEN1 -> . THEN

    OR              shift and go to state 67
    THEN            shift and go to state 68

    THEN1                          shift and go to state 66

state 36

    (63) EL -> TL . NOT
    (64) EL -> TL .
    (65) TL -> TL . AND FL
